# Spindle

./: AUTHORS  INSTALL  Makefile.am  Makefile.in  README  README.md  acinclude.m4  aclocal.m4  configure  configure.in  makeIncludes.sh  mkinstalldirs  spindle_config.h.in
include/samples/: disconnected_mesh.h  fe_mesh.h  small_mesh.h
libspindle/: Makefile.am  Makefile.in
libspindle/adt/: Makefile.am  Makefile.in
libspindle/adt/BucketSorter/: ArrayBucketSorter.cc  ArrayBucketSorter.h  Makefile.am  Makefile.in
libspindle/adt/Forest/: EliminationForest.cc  EliminationForest.h  GenericForest.cc  GenericForest.h  Makefile.am  Makefile.in
libspindle/adt/Graph/: Graph.cc  Graph.h  GraphBase.cc  GraphBase.h  GraphUtils.cc  GraphUtils.h  Makefile.am  Makefile.in  QuotientGraph.cc  QuotientGraph.h
libspindle/adt/Heap/: BinaryHeap.cc  BinaryHeap.h  Makefile.am  Makefile.in
libspindle/adt/Map/: CompressionMap.cc  CompressionMap.h  Makefile.am  Makefile.in  MapUtils.cc  MapUtils.h  PermutationMap.cc  PermutationMap.h  ScatterMap.cc  ScatterMap.h
libspindle/adt/Matrix/: Makefile.am  Makefile.in  Matrix.cc  Matrix.h  MatrixBase.cc  MatrixBase.h  MatrixUtils.cc  MatrixUtils.h
libspindle/io/: ChacoFile.cc  ChacoFile.h  ChristensenFile.cc  ChristensenFile.h  DobrianFile.cc  DobrianFile.h  FortranEmulator.cc  FortranEmulator.h  GraphMatrixFileFactory.cc  GraphMatrixFileFactory.h  HarwellBoeingFile.cc  HarwellBoeingFile.h  Makefile.am  Makefile.in  MatrixMarketFile.cc  MatrixMarketFile.h  SpindleArchive.cc  SpindleArchive.h  SpindleFile.cc  SpindleFile.h  SpoolesFile.cc  SpoolesFile.h  TextDataFile.cc  TextDataFile.h  Tokenizer.cc  Tokenizer.h
libspindle/order/: Makefile.am  Makefile.in  MinPriorityEngine.cc  MinPriorityEngine.h  MinPriorityStrategies.cc  MinPriorityStrategies.h  OrderingAlgorithm.cc  OrderingAlgorithm.h  RCMEngine.cc  RCMEngine.h  SloanEngine.cc  SloanEngine.h
libspindle/std/: Makefile.am  Makefile.in  SharedArray.h  SharedPtr.h  SpindleAlgorithm.cc  SpindleAlgorithm.h  SpindleBaseClass.cc  SpindleBaseClass.h  SpindlePersistant.cc  SpindlePersistant.h  spindle.h  spindle_algo.h  spindle_func.h  triple.h
libspindle/sys/: ClassMetaData.cc  ClassMetaData.h  CommandLineOptions.cc  CommandLineOptions.h  Makefile.am  Makefile.in  OptionDatabase.cc  OptionDatabase.h  PersistanceRegistry.cc  PersistanceRegistry.h  SpindleErrorCodes.h  SpindleSystem.cc  SpindleSystem.h  SpindleTraceCodes.h  StackTrace.cc  StackTrace.h  stopwatch.h
libspindle/util/: BreadthFirstSearch.cc  BreadthFirstSearch.h  GraphCompressor.cc  GraphCompressor.h  Makefile.am  Makefile.in  PseudoDiameter.cc  PseudoDiameter.h  SymbolicFactorization.cc  SymbolicFactorization.h
sample_apps/: Makefile.am  Makefile.in  addamd.cc  chachb2dobrian.cc  constrainedWavefront.cc  greedyfillredux.cc  liummd.cc  sloan.cc  spoolesmmd.cc  symbfact.cc
tests/: Makefile.am  Makefile.in
tests/libspindle/: ArrayBucketSorterDriver.cc  Makefile.am  Makefile.in
tests/libspindle/adt/: Makefile.am  Makefile.in
tests/libspindle/adt/BucketSorter/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out
tests/libspindle/adt/Forest/: Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out  test03.cc  test03.out
tests/libspindle/adt/Graph/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out  test03.cc  test03.out  test10.cc  test10.out  test11.cc  test11.out  test12.cc  test12.out
tests/libspindle/adt/Heap/: Makefile.am  Makefile.in  test01.cc  test01.out
tests/libspindle/adt/Map/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out  test03.cc  test03.out
tests/libspindle/adt/Matrix/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out
tests/libspindle/io/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out  test03.cc  test03.out  test04.cc  test04.out  test05.cc  test05.out  test06.cc  test06.out  test06b.cc  test06b.out  test07.cc  test07.out  test08.cc  test08.out
tests/libspindle/io/input/: 5x5grid5.graphb  bcsstk01.ld  simple.coord  simple.matrixmarket  test1.lcrs.mat  testMatrix.chac  testfile.txt
tests/libspindle/order/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out  test03.cc  test03.out  test04.cc  test04.out  test05.cc  test05.out  test06.cc  test06.out
tests/libspindle/std/: Makefile.am  Makefile.in  old_unit.sh  test02.cc  test02.out
tests/libspindle/sys/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out  test04.cc  test04.out  test05.cc  test05.in  test05.out
tests/libspindle/util/: Makefile.am  Makefile.in  old_unit.sh  test01.cc  test01.out  test02.cc  test02.out  test03.cc  test03.out  test04.cc  test04.out
tests/petf/: Auditor.pm  Reporter.pm  Runner.pm
